fix: layout overflowing when scaling text

--- a/src/components/Hello/_Hello.scss
+++ b/src/components/Hello/_Hello.scss
@@ -77,10 +77,10 @@
       border-radius: 4px;
       color: $gray-100;
 
-      &:first-child {
+      &#cv-button {
         background-color: $light-blue-200;
       }
-      &:last-child {
+      &#github-button {
         background-color: transparent;
         border: 2px solid $light-blue-200;
       }
